--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top">
-                                                <span class="name">New York</span>
-                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Treat yoursel to a VIP ice cream party at MadLab</a></h5>
+                                                <span class="name">New York, New York</span>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Obtenga un 20% de descuento en One World Observatory® en NYC</a></h5>
                                             </div>
                                             <div class="back-bottom">
-                                                <span class="name">New York</span>
-                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Take a private curated tour of the Rubell Museum</a></h5>
+                                                <span class="name">New York, New York</span>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Disfrute un paquete VIP para la reapertura de CHICAGO el musical</a></h5>
                                             </div>
                                             <a href="https://priceless.com" class="more-btn">Conoce más</a>
                                         </div>
@@ -140,11 +140,11 @@
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top">
-                                                    <span class="name">Estados Unidos</span>
+                                                    <span class="name">New York, New York</span>
                                                     <h5 class="frace"><a href="https://mtr.mastercardservices.com/en"  target="_blank">Bergdorf Goodman</a></h5>
                                             </div>
                                             <div class="back-bottom">
-                                                    <span class="name">Estados Unidos</span>
+                                                    <span class="name">New York, New York</span>
                                                     <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">Mandarin Oriental, New York</a></h5>
                                                 </a>
                                             </div>
@@ -228,11 +228,11 @@
                                         <div class="card-back-text">
                                             <div class="back-top">
                                                 <span class="name">Miami, Florida</span>
-                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Treat yoursel to a VIP ice cream party at MadLab</a></h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Regálate una fiesta de helado en MadLab</a></h5>
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">Miami, Florida</span>
-                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Take a private curated tour of the Rubell Museum</a></h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Haz un tour privado con un experto en arte en Rubell Museum</a></h5>
                                             </div>
                                             <a href="https://www.priceless.com" target="_blank" class="more-btn">Conoce más</a>
                                         </div>
@@ -355,12 +355,11 @@
                                         <div class="card-back-text">
                                             <div class="back-top">
                                                 <span class="name">Madrid, España</span>
-                                                <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">As one of the most important luxury women´s fashion</a></h5>
+                                                <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">Una de las más importantes cadenas de lujo en moda femenina</a></h5>
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">Madrid, España</span>
-                                                <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">The exclusive Heritage
-                                                    Madrid Hotel </a></h5>
+                                                <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">El exclusivo Heritage Madrid Hotel</a></h5>
                                             </div>
                                             <a href="https://mtr.mastercardservices.com/en" target="_blank" class="more-btn">Conoce más</a>
                                         </div>
@@ -573,8 +572,8 @@
                                             <li>Acompañamiento a la zona de embarque.</li>
                                             <li>Recogida de equipaje.</li>
                                         </ul>
-                                        Incluye diez (10) visitas gratuitas por año** por tarjeta habiente, a partir del 1 de febrero 2020 este beneficio será unicamente exclusivo para titulares (principales o adicionales) incluyendo solo acompañantes menores de 18 años***. Para las reservas realizadas antes de esta fecha aplican las condiciones actuales.
-                                        Realiza tu reserva con 24 horas de antelación a través de <a href="https://beforeboarding.com/" target="_blank">https://beforeboarding.com</a> *Acceso para la Sala Premium y Sala Caribe en AILA y Sala Zafiro en El Cibao. **la fecha de corte anual es cada 1 de julio. ***Si usas los servicios de salida y llegada habrás utilizado 2 visitas. Si vas acompañado, habrás utilizado tantas visitas como acompañantes viajen contigo.
+                                        Incluye diez (10) visitas gratuitas por año** por tarjeta habiente, a partir del 1 de febrero 2020 este beneficio será unicamente exclusivo para titulares (principales o adicionales) incluyendo solo acompañantes menores de 18 años***.<br><br> Para las reservas realizadas antes de esta fecha aplican las condiciones actuales.<br><br>
+                                        <b>Realiza tu reserva con 24 horas de antelación a través de <a  href="https://beforeboarding.com/" target="_blank">https://beforeboarding.com</a></b><br> *Acceso para la Sala Premium y Sala Caribe en AILA y Sala Zafiro en El Cibao. **la fecha de corte anual es cada 1 de julio. ***Si usas los servicios de salida y llegada habrás utilizado 2 visitas. Si vas acompañado, habrás utilizado tantas visitas como acompañantes viajen contigo.
                                         <br>
                                         <br>
                                         *Este beneficio solo aplica para tus tarjetas Mastercard Black BHD León.
@@ -1030,7 +1029,7 @@
                                 <h4 class="benefits-panel--info__title">Cuotas BHD León.</h4>
                                 <div class="collapse" id="cuotas-leon">
                                     <span>
-                                        Es la línea de crédito adicional de tu tarjeta principal, que funciona con un límite independiente para que puedas realizar compras pagando directamente en el comercio de tu preferencia. Con tus tarjetas Mastercard Platinum y Black BHD León puedes pagar tus consumos en la cantidad de cuotas que quieras. Desde adquirir un electrodoméstico, comprar ropa o tus vacaciones soñadas hasta cubrir los gastos escolares de tus hijos. Conoce más aquí.
+                                        Es la línea de crédito adicional de tu tarjeta principal, que funciona con un límite independiente para que puedas realizar compras pagando directamente en el comercio de tu preferencia. Con tus tarjetas Mastercard Platinum y Black BHD León puedes pagar tus consumos en la cantidad de cuotas que quieras. Como tus vacaciones soñadas, financia tus viajes al pagar en las siguientes agencias de viaje: <b>ARBAJE TOURS</b> (6 meses de financiación) o <b>GESTUR</b> (3 meses de financiación) con una tasa de  interés del 2%.
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#cuotas-leon" aria-expanded="false" aria-controls="collapseExample">
@@ -1058,7 +1057,8 @@
                                     <span>
                                         Es la única tarjeta en el mercado diseñada para satisfacer los gustos y exigencias de la mujer.
                                         <br><br>
-                                        Paga en establecimientos, ordena tus comidas por delivery, compra por internet y retira en cajeros automáticos de todo el mundo.
+                                        <a class="btn_muj" href="https://mujermujer.bhdleon.com.do/" target="_blank">Solicitala aquí</a>
+                                        <br><br>
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#leon-stars" aria-expanded="false" aria-controls="collapseExample">
