--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
                                     <span>
                                         Es la única tarjeta en el mercado diseñada para satisfacer los gustos y exigencias de la mujer.
                                         <br><br>
-                                        <a class="btn_muj" href="https://mujermujer.bhdleon.com.do/" target="_blank">Solicitala aquí</a>
+                                        <a class="btn_muj" href="https://mujermujer.bhdleon.com.do/" target="_blank">Solicítala aquí</a>
                                         <br><br>
                                     </span>
                                 </div>
