--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                                         <div class="card-back-text">
                                             <div class="back-top">
                                                 <span class="name">New York, New York</span>
-                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Obtenga un 20% de descuento en One World Observatory® en NYC</a></h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Obtén un 20% de descuento en One World Observatory® en NYC</a></h5>
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">New York, New York</span>
-                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Disfrute un paquete VIP para la reapertura de CHICAGO el musical</a></h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Obtén un paquete VIP para la reapertura de CHICAGO el musical</a></h5>
                                             </div>
                                             <a href="https://priceless.com" class="more-btn">Conoce más</a>
                                         </div>
@@ -566,14 +566,13 @@
                                     <span>
                                         <ul>
                                             <li>Acceso a Sala VIP*</li>
-                                            <li>Tramites de migración.</li>
+                                            <li>Trámites de migración.</li>
                                             <li>Acceso por filtro de seguridad privado.</li>
-                                            <li>Acompañamiento a la zona de embarque.</li>
                                             <li>Acompañamiento a la zona de embarque.</li>
                                             <li>Recogida de equipaje.</li>
                                         </ul>
-                                        Incluye diez (10) visitas gratuitas por año** por tarjeta habiente, a partir del 1 de febrero 2020 este beneficio será unicamente exclusivo para titulares (principales o adicionales) incluyendo solo acompañantes menores de 18 años***.<br><br> Para las reservas realizadas antes de esta fecha aplican las condiciones actuales.<br><br>
-                                        <b>Realiza tu reserva con 24 horas de antelación a través de <a  href="https://beforeboarding.com/" target="_blank">https://beforeboarding.com</a></b><br> *Acceso para la Sala Premium y Sala Caribe en AILA y Sala Zafiro en El Cibao. **la fecha de corte anual es cada 1 de julio. ***Si usas los servicios de salida y llegada habrás utilizado 2 visitas. Si vas acompañado, habrás utilizado tantas visitas como acompañantes viajen contigo.
+                                        Incluye diez (10) visitas gratuitas por año** por tarjeta habiente, a partir del 1 de febrero 2020. Este beneficio será únicamente exclusivo para titulares (principales o adicionales) incluyendo solo acompañantes menores de 18 años***.<br><br> Para las reservas realizadas antes de esta fecha aplican las condiciones actuales.<br><br>
+                                        <b>Realiza tu reserva con 24 horas de antelación a través de <a href="https://beforeboarding.com/" target="_blank">beforeboarding.com</a></b> *Acceso para la Sala Premium y Sala Caribe en AILA y Sala Zafiro en El Cibao. **La fecha de corte anual es cada 1 de julio. ***Si usas los servicios de salida y llegada habrás utilizado 2 visitas. Si vas acompañado, habrás utilizado tantas visitas como acompañantes viajen contigo.
                                         <br>
                                         <br>
                                         *Este beneficio solo aplica para tus tarjetas Mastercard Black BHD León.
@@ -599,7 +598,7 @@
                                 <h5 class="travel-panel--info__text">Es un servicio único que ofrece acceso gratuito a la sala del aeropuerto en caso de retraso del vuelo.<br></h5>
                                 <div class="collapse" id="delay">
                                     <span>
-                                        Debes registrar su vuelo antes de la hora de salida programada en
+                                        Debes registrar tu vuelo antes de la hora de salida programada en
                                         <a style="color: #000;word-break: break-all;" href="https://flightdelaypass.mastercard.com/" target="_blank">https://flightdelaypass.mastercard.com/</a> y si la aerolínea anuncia un retraso de más
                                         de dos horas, proporciona acceso LoungeKey a una sala de espera en el aeropuerto
                                         para ti y hasta cuatro (4) acompañantes de viaje.
@@ -627,14 +626,14 @@
                         <div class="col-9">
                             <div class="travel-panel--info">
                                 <h4 class="travel-panel--info__title">Wi-Fi Boingo</h4>
-                                <h5 class="travel-panel--info__text">Proporciona acceso global, gratuito e ilimitado después de inscribirse a su cuenta
+                                <h5 class="travel-panel--info__text">Proporciona acceso global, gratuito e ilimitado después de inscribirte a tu cuenta
                                     Boingo, en más de 1 millón de hotspots con velocidad superior al promedio de banda
                                     ancha.
                                     </h5>
                                 <div class="collapse" id="bhd">
                                     <span>
                                         Estos hotspots incluyen una red en aeropuertos, hoteles, restaurantes,
-                                        escenarios, estadios, hubs de transporte y vuelos y te da acceso hasta para cuatro
+                                        escenarios, estadios, hubs de transporte y vuelos además te da acceso hasta para cuatro
                                         dispositivos. Solo debes registrar tus tarjetas Mastercard Platinum y Black BHD León ya activadas en
                                         <a style="color:#fff" href="https://mastercard.boingo.com" target="_blank">https://mastercard.boingo.com</a> para inscribirte al beneficio de Wi-Fi. Una vez inscrito
                                         recibirás instrucciones para descargar la aplicación WiFinder de Boingo y así tener
@@ -662,7 +661,7 @@
                                 <h5 class="travel-panel--info__text">¿Deseas planear tus próximas vacaciones? Un asesor de Travel & Lifestyle Services de Mastercard está disponible 24 horas al día y te ayudará durante todo el viaje.</h5>
                                 <div class="collapse" id="stairs">
                                     <span >
-                                        Recibe desayuno diario gratuito, upgrades en habitaciones*, early check-in/late check-out* y servicios especiales en más de 2,000 hoteles y resorts de 4 y 5 estrellas, alrededor del mundo. Además, ahorros y beneficios exclusivos en alquiler de autos, boletos aéreos, tours y cruceros. También cuentas con la plataforma digital para comprar reservar y comprar online tus tickets aéreos, hoteles, alquiler de auto, y todo lo demás que necesitas para tu viaje, en moneda local y en múltiples idiomas.
+                                        Recibe desayuno diario gratuito, upgrades en habitaciones*, early check-in/late check-out* y servicios especiales en más de 2,000 hoteles y resorts de 4 a 5 estrellas, alrededor del mundo. Además, ahorros y beneficios exclusivos en alquiler de autos, boletos aéreos, tours y cruceros. También cuentas con la plataforma digital para reservar y comprar online tus tickets aéreos, hoteles, alquiler de auto, y todo lo demás que necesitas para tu viaje, en moneda local y en múltiples idiomas.
 
 <br><br>Ingresa a <a style="color: #fff;" href="http://travel.mastercard.com" target="_blank">http://travel.mastercard.com</a> y prepara tus vacaciones.
 
@@ -769,7 +768,7 @@
                                 <h4 class="protection-panel--info__title">Garantia Extendida.</h4>
                                 <div class="collapse" id="waranty">
                                     <span>
-                                        Protege tus compras con la cobertura de garantía extendida, hasta USD 2.500 por ocurrencia / USD 5.000 por 12 meses, de tus tarjetas Mastercard Black BHD León. Esta cobertura proporciona cobertura extendida de los términos de la garantía original del fabricante en compras cubiertas hasta por 1 año después de que tanto la garantía original como la de la tienda y el año opcional de garantía han terminado, sin exceder 3 años. La compra debe ser pagada en su totalidad con tu tarjeta de crédito Mastercard Black.
+                                        Protege tus compras con la cobertura de garantía extendida, hasta USD 2.500 por ocurrencia / USD 5.000 por 12 meses, de tus tarjetas Mastercard Black BHD León. Esta cobertura proporciona extensión de los términos de la garantía original del fabricante en compras cubiertas hasta por 1 año después de que tanto la garantía original como la de la tienda y el año opcional de garantía hayan terminado, sin exceder 3 años. La compra debe ser pagada en su totalidad con tu tarjeta de crédito Mastercard Black.
                                         <br><br>
                                         *Este beneficio solo aplica para tus tarjetas Mastercard Black  BHD León.
                                     </span>
@@ -794,7 +793,7 @@
                                     robos en cajeros automáticos.</h4>
                                 <div class="collapse" id="asalto">
                                     <span>
-                                        Si un tarjeta habiente Mastercard Black BHD León es víctima de un robo o asalto utilizando un cajero automático, esta protección reemplaza el efectivo robado hasta por USD 1.000 por ocurrencia/ USD 3.000 por 12 meses y de US$10,000 en caso de fallecimiento del titular producto del siniestro.
+                                        Si una tarjeta habiente Mastercard Black BHD León es víctima de un robo o asalto utilizando un cajero automático, esta protección reemplaza el efectivo robado hasta por USD 1.000 por ocurrencia/ USD 3.000 por 12 meses y de US$10,000 en caso de fallecimiento del titular producto del siniestro.
                                         <br><br>
                                         *Este beneficio solo aplica para tus tarjetas Mastercard Black BHD León.
                                     </span>
@@ -825,7 +824,7 @@
                                         <br><br>
                                         <b>MastercardAssist Black:</b> La Mastercard Black BHD León cuenta con la seguridad y protección
                                         que ofrece cobertura de gastos médicos y dinero en efectivo para gastos de hospital.
-                                        Gastos médicos hasta USD 150.000 hasta por 60 días consecutivos. El viaje debe haber
+                                        Gastos médicos de máximo USD 150.000 hasta por 60 días consecutivos. El viaje debe haber
                                         sido pagado en su totalidad con tu tarjeta Mastercard Black BHD León.
                                     </span>
                                 </div>
@@ -850,7 +849,7 @@
                                     <span>
                                         Entérate al instante de tus movimientos, controla mejor tus transacciones y
                                         detecta a tiempo cualquier consumo no autorizado con nuestro servicio de Alertas,
-                                        a través del cual recibirás un correo electrónico con el detalle de las a ctividades
+                                        a través del cual recibirás un correo electrónico con el detalle de las actividades
                                         realizadas con tu tarjeta de crédito.
                                     </span>
                                 </div>
@@ -877,7 +876,7 @@
                                 <h4 class="protection-panel--info__title">Protección Contra Inconvenientes  de Viajes.</h4>
                                 <div class="collapse" id="inconvinience">
                                     <span>
-                                        <b>Mastercard Black</b> cubre los gastos de viaje y acomodaciones, pagando por adelantado, si el viaje es repentinamente cancelado, hasta US$3,000, o si hay demoras o retraso, hasta US$200 (más de 4 horas) El viaje debe haber sido pagado en su totalidad con tu tarjeta de crédito Mastercard Black BHD León.
+                                        <b>Mastercard Black</b> cubre los gastos de viaje y acomodaciones, pagando por adelantado, si el viaje es repentinamente cancelado, hasta US$3,000, o si hay demoras o retraso, hasta US$200 (más de 4 horas). El viaje debe haber sido pagado en su totalidad con tu tarjeta de crédito Mastercard Black BHD León.
                                         <br><br>
                                         <b>Mastercard Platinum</b> cubre los gastos de viaje y acomodaciones, pagando por adelantado
                                         hasta US$1,500, si tu viaje es repentinamente cancelado, o si hay demoras o retraso por más de 4
@@ -906,8 +905,6 @@
                                         <b>Mastercard Black BHD León</b> te ayuda a recuperar tu equipaje perdido con el apoyo directo de la aerolínea y cubre los gastos incurridos como resultado de demora hasta por US$600 o pérdida de equipaje hasta por US$3,000.Para obtener más información sobre los beneficios Mastercard, llama al 1.829.954.8445 o visita <a style="color: #fff;" href="https://mastercard.com/do/black" target="_blank">www.mastercard.com/do/black</a> 
                                         <br><br>
 
-                                        Alertas de Consumo Entérate al instante de tus movimientos, controla mejor tus transacciones y detecta a tiempo cualquier consumo no autorizado con nuestro servicio de Alertas, a través del cual recibirás un correo electrónico con el detalle de las actividades realizadas con tu tarjeta de crédito.
-                                        <br><br>
                                         *Este beneficio solo aplica para tus tarjetas Mastercard Black BHD León.
                                     </span>
                                 </div>
@@ -930,7 +927,7 @@
                                 <h4 class="protection-panel--info__title">Master Rental.</h4>
                                 <div class="collapse" id="rental">
                                     <span>
-                                        Cuando alquilas un vehículo con tus tarjetas Mastercard Platinum y Black BHD León, recibes cobertura de USD 75.000 por daños al vehículo alquilado causados por colisión robo, incendio accidental y vandalismo, cuando la tarjetahabiente rechaza CDW (exención parcial de responsabilidad por daños de colisión) o LDW (aviso de salida de carril) de parte de la compañía de alquiler, alrededor del mundo hasta 60 días consecutivos.
+                                        Cuando alquilas un vehículo con tus tarjetas Mastercard Platinum y Black BHD León, recibes cobertura de USD 75.000 por daños al vehículo alquilado causados por colisión robo, incendio accidental y vandalismo, cuando la tarjeta habiente rechaza CDW (exención parcial de responsabilidad por daños de colisión) o LDW (aviso de salida de carril) de parte de la compañía de alquiler, alrededor del mundo hasta 60 días consecutivos.
                                     </span>
                                 </div>
                                 <button  type="button" data-bs-toggle="collapse" data-bs-target="#rental" aria-expanded="false" aria-controls="collapseExample">
@@ -1029,7 +1026,7 @@
                                 <h4 class="benefits-panel--info__title">Cuotas BHD León.</h4>
                                 <div class="collapse" id="cuotas-leon">
                                     <span>
-                                        Es la línea de crédito adicional de tu tarjeta principal, que funciona con un límite independiente para que puedas realizar compras pagando directamente en el comercio de tu preferencia. Con tus tarjetas Mastercard Platinum y Black BHD León puedes pagar tus consumos en la cantidad de cuotas que quieras. Como tus vacaciones soñadas, financia tus viajes al pagar en las siguientes agencias de viaje: <b>ARBAJE TOURS</b> (6 meses de financiación) o <b>GESTUR</b> (3 meses de financiación) con una tasa de  interés del 2%.
+                                        Es la línea de crédito adicional de tu tarjeta principal, que funciona con un límite independiente para que puedas realizar compras pagando directamente en el comercio de tu preferencia. Con tus tarjetas Mastercard Platinum y Black BHD León puedes pagar tus consumos en la cantidad de cuotas que quieras. Como tus vacaciones soñadas, financia tus viajes al pagar en las siguientes agencias de viaje: <b>ARBAJE TOURS</b> (6 meses de financiación) o <b>GESTUR</b> (3 meses de financiación) con una tasa del 2% de interés.
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#cuotas-leon" aria-expanded="false" aria-controls="collapseExample">
